feat: 更新版本至3.1.0并优化多个功能模块
- 升级所有子模块版本号至3.1.0
- 新增EmakiGem模块并集成到主POM
- 重构属性条件检查系统，支持更灵活的Lore正则匹配
- 优化强化成功率配置，为所有配方添加默认星级成功率
- 改进GUI系统，增强物品源显示名称处理
- 修复物理暴击伤害最小值限制为0
- 移除调试模式配置项，简化核心配置文件
- 重构会话管理使用PlayerSessionMap
- 优化属性系统默认配置结构
- 改进药水效果类型解析兼容性
- 增强YAML配置解析稳定性
- 修复缓存管理器的并发问题
- 更新语言文件，调整默认属性配置描述